cabal-version:      2.4
name:               scheme48
version:            0.1.0.0
build-type:         Simple
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Robert O'Shea
maintainer:         robertoshea2k11@gmail.com
copyright:          2023 Robert O'Shea
category:           Programming
extra-source-files: README.md
                    CHANGELOG.md

executable scheme48
    main-is:          Main.hs
    other-modules:    Scheme,
                      SchemeParser,
                      SchemeEval
    build-depends:    base ^>=4.16.4.0, 
                      parsec
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints